--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,30 +1,30 @@
-html {
+.html {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 36px;
     line-height: 61px;
 
 }
-#wrapper {
+.#wrapper {
     width: 1208px;
     margin-left: auto;
     margin-right: auto;
 }
-footer {
+.footer {
     text-align: center;
     color: blue;
 }
-h1 {
+.h1 {
     font-size: 200%;
 }
-h2 {
+.h2 {
     font-size: 180%;
 }
-h3 {
+.h3 {
     font-size: 160%;
 }
-menu {
+.menu {
     padding-left: 0px;
 }
-menu li {
+.menu li {
     display: inline;
 }
